# MobileRobots-2020-1

./: .gitignore  README.md  practice01 (BFS)  practice07.cpp
catkin_ws/: .bashrc
catkin_ws/src/config_files/rviz/: getting_started.rviz  kalman_filtering.rviz  line_extraction.rviz  pot_fields.rviz
catkin_ws/src/datasets/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/camera_rgb/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/laser_manager/: CMakeLists.txt
catkin_ws/src/hardware/robotino_description/: package.xml  robotino.urdf
catkin_ws/src/hardware/robotino_node/: CMakeLists.txt
catkin_ws/src/hri/simple_gui/: CMakeLists.txt
catkin_ws/src/navigation/navig_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/students/altamirano_leal/: CMakeLists.txt  package.xml
catkin_ws/src/students/alvarado_paz/: CMakeLists.txt  package.xml
catkin_ws/src/students/avalos_garcia/: CMakeLists.txt  package.xml
catkin_ws/src/students/carranza_bravo/: CMakeLists.txt  package.xml
catkin_ws/src/students/cruz_navarrete/: CMakeLists.txt  package.xml
catkin_ws/src/students/gil_gonzalez/: CMakeLists.txt  package.xml
catkin_ws/src/students/guerrero_sanchez/: CMakeLists.txt  package.xml
catkin_ws/src/students/hernandez_sanchez/: CMakeLists.txt  package.xml
catkin_ws/src/students/jimenez_sanchez/: CMakeLists.txt  package.xml
catkin_ws/src/students/lagunas_mendez/: CMakeLists.txt  package.xml
catkin_ws/src/students/lopez_zuniga/: CMakeLists.txt  package.xml
catkin_ws/src/students/moreno_madrid/: package.xml  (+1 more)
catkin_ws/src/surge_et_ambula/: CMakeLists.txt
(+266 files in other folders)
